--- a/index.html
+++ b/index.html
@@ -1,57 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/normalize.css-master/normalize.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/normalize.css-master/normalize.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Event/Conference Webpage</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Cat Fancy Event</h1>
-        <p>The fanciest cat event</p>
+      <h1>Cat Fancy Event</h1>
+      <p>The fanciest cat event</p>
     </header>
     <nav>
-        <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">locations</a></li>
-            <li><a href="#">rsvp</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">locations</a></li>
+        <li><a href="#">rsvp</a></li>
+      </ul>
     </nav>
     <section class="content">
-        <h2>Cat Fancy Event 2014</h2>
-        <p>The 115th annual Cat Fancy Event is being held in New York City on December 21st. This is the fanciest cat
-            event of the year, starring over 300 different cats. This event was made to show America how great cats
-            really are. There will be treats at the walk in, and for the cat owners there will be a buffet in the
-            lounge. We thank you for coming to our event site, and hope to see you on December 21st. Thank you.</p>
-        <img src="assets/img/funny-cat-download-hd-backgrounds (1).jpg" alt="ba-chu-meo">
-        <h3>Featured Cats</h3>
-        <p>George C.</p>
-        <p>Sam F.</p>
-        <p>Doug T.</p>
-        <p>Sally Z.</p>
-        <img src="assets/img/Generic-Cat-19700452_69436_ver1.0_320_240.jpg" alt="geogre">
-        <img src="assets/img/Cat Pictures 8.jpg" alt="sam">
-        <img src="assets/img/download.jpg" alt="doug">
-        <img src="assets/img/avatar-meo-cute_1.jpg" alt="sally">
-        <p>These cats will be the showrunners this year. George has a long history in cat events, and is looking forward
-            to this year's Cat Fancy Event. Sam is a world-class runner, and will be showing his new techniques. Doug
-            likes to lay around, and will practice his abilities. Sally was invited because her mom made a fit about not
-            coming.</p>
+      <h2>Cat Fancy Event 2014</h2>
+      <p>
+        The 115th annual Cat Fancy Event is being held in New York City on
+        December 21st. This is the fanciest cat event of the year, starring over
+        300 different cats. This event was made to show America how great cats
+        really are. There will be treats at the walk in, and for the cat owners
+        there will be a buffet in the lounge. We thank you for coming to our
+        event site, and hope to see you on December 21st. Thank you.
+      </p>
+      <img
+        src="assets/img/funny-cat-download-hd-backgrounds (1).jpg"
+        alt="ba-chu-meo"
+      />
+      <h3>Featured Cats</h3>
+      <p>George C.</p>
+      <p>Sam F.</p>
+      <p>Doug T.</p>
+      <p>Sally Z.</p>
+      <img
+        src="assets/img/Generic-Cat-19700452_69436_ver1.0_320_240.jpg"
+        alt="geogre"
+      />
+      <img src="assets/img/Cat Pictures 8.jpg" alt="sam" />
+      <img src="assets/img/download.jpg" alt="doug" />
+      <img src="assets/img/avatar-meo-cute_1.jpg" alt="sally" />
+      <p>
+        These cats will be the showrunners this year. George has a long history
+        in cat events, and is looking forward to this year's Cat Fancy Event.
+        Sam is a world-class runner, and will be showing his new techniques.
+        Doug likes to lay around, and will practice his abilities. Sally was
+        invited because her mom made a fit about not coming.
+      </p>
     </section>
     <footer>
-        <ul class="fNav">
-            <li><a href="#">home</a></li>
-            <li><a href="#">about</a></li>
-            <li><a href="#">locations</a></li>
-            <li><a href="#">rsvp</a></li>
-        </ul>
-        <p>© - Copyright 2014</p>
+      <ul class="fNav">
+        <li><a href="#">home</a></li>
+        <li><a href="#">about</a></li>
+        <li><a href="#">locations</a></li>
+        <li><a href="#">rsvp</a></li>
+      </ul>
+      <p>© - Copyright 2014</p>
     </footer>
-</body>
-
+  </body>
 </html>
